--- a/Megaweb/about.html
+++ b/Megaweb/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
   <html lang="en">
     <head>
-      <link rel="stylesheet" href="master.css">
-      <script type="text/javascript" src="animate.js"></script>
-      <script type="text/javascript" src="script.js"></script>
+      <link rel="stylesheet" href="/css/master.css">
+      <script src="/js/animate.js"></script>
+      <script src="/js/script.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <title>About us</title>
+    <title>Mega Web | About us</title>
   </head>
   <body>
     <div class="header">
@@ -36,6 +36,4 @@
     <div class="main-paragraphs">
       <center><article class="main-paragraph">We are a business based in U.K for web design and software engineering<article></center>
     </div>
-    <script type="text/javascript" src="animate.js">
-    </script>
   </body>
