--- a/Megaweb/contact.html
+++ b/Megaweb/contact.html
@@ -2,12 +2,12 @@
   <html lang="en">
     <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="master.css">
-      <script type="text/javascript" src="animate.js"></script>
-      <script type="text/javascript" src="script.js"></script>
+      <link rel="stylesheet" href="/css/master.css">
+      <script src="/js/animate.js"></script>
+      <script src="/js/script.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-    <title>Contact</title>
+    <title>Mega Web | Contact</title>
   </head>
   <div class="header">
     <div class="nav-bar-section">
@@ -42,6 +42,5 @@
         </form>
         </div>
       </div >
-        <script type="text/javascript" src="animate.js"></script>
-      </body>
+	</body>
     </html>
