--- a/Megaweb/index.html
+++ b/Megaweb/index.html
@@ -2,12 +2,12 @@
   <html lang="en">
     <head>
       <meta charset="utf-8">
-      <link rel="stylesheet" href="master.css">
-      <script src="animate.js"></script>
+      <link rel="stylesheet" href="/css/master.css">
+      <script src="/js/animate.js"></script>
+      <script src="/js/script.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="script.js"></script>
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-      <title>Grand web</title>
+      <title>Mega Web | Home</title>
     </head>
     <body onload="cecFunction()">
     <div class="header">
@@ -68,7 +68,6 @@
       </script>
         </body>
   </html>
-
   <!-- developed by
 
           ------------
