move js to the bottom

--- a/Megaweb/post.html
+++ b/Megaweb/post.html
@@ -3,9 +3,6 @@
     <head>
       <meta charset="utf-8">
       <link rel="stylesheet" href="/css/master.css">
-      <script type="text/javascript" src="/js/animate.js"></script>
-      <script type="text/javascript" src="/js/script.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
       <title>Mega Web | Post</title>
     </head>
@@ -32,5 +29,8 @@
             <center><a href="Index.html"><div class="logo-section">THANKS!</div></a></center>
             <center><article class="eds-article"><i class="italic-this">Thanks!, your comment has been sent to our developer</i></article></center>
       </div>
+      <script src="/js/animate.js"></script>
+      <script src="/js/script.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </body>
 </html>
