--- a/Megaweb/about.html
+++ b/Megaweb/about.html
@@ -2,9 +2,6 @@
   <html lang="en">
     <head>
       <link rel="stylesheet" href="/css/master.css">
-      <script src="/js/animate.js"></script>
-      <script src="/js/script.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
     <title>Mega Web | About us</title>
   </head>
@@ -36,4 +33,8 @@
     <div class="main-paragraphs">
       <center><article class="main-paragraph">We are a business based in U.K for web design and software engineering<article></center>
     </div>
+          <script src="/js/animate.js"></script>
+      <script src="/js/script.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </body>
+</html>
