code reidented and remove blank lines

--- a/Megaweb/post.html
+++ b/Megaweb/post.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="utf-8">
-      <link rel="stylesheet" href="/css/master.css">
-      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
-      <title>Mega Web | Post</title>
-    </head>
-      <body>
-        <div class="header">
-            <div class="nav-bar-section">
-              <div class="navigate">
-                <nav class="menu-nav">
-                  <li class="navbar">
-                  <li><a href="#">Test</a></li>
-                  <li><a href="#">Test</a></li>
-                  <li><a href="#">Test</a></li>
-                  </li>
-                </nav>
-              </div>
-          <h1 class="main-title">MEGA WEB</h1>
-          <div class="section-options">
-            <a href="about.html"><option class="asdef-options">ABOUT US</option></a>
-            <a href="contact.html"><option class="asdef-options">CONTACT</option></a>
-            <a href="stories.html"><option class="asdef-options">STORIES</option></a>
-          </div>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/master.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
+  <title>Mega Web | Post</title>
+</head>
+<body>
+  <div class="header">
+    <div class="nav-bar-section">
+      <div class="navigate">
+        <nav class="menu-nav">
+          <li class="navbar">
+            <li><a href="dev.html">Programmers</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="contact.html">Contact</a></li> </li>
+          </nav>
         </div>
-            <button type="button" class="button-to-open-nav-bar">Menu</button>
-            <center><a href="Index.html"><div class="logo-section">THANKS!</div></a></center>
-            <center><article class="eds-article"><i class="italic-this">Thanks!, your comment has been sent to our developer</i></article></center>
+        <h1 class="main-title">MEGA WEB</h1>
+        <div class="section-options">
+          <a href="about.html"><option class="asdef-options">ABOUT US</option></a>
+          <a href="contact.html"><option class="asdef-options">CONTACT</option></a>
+          <a href="stories.html"><option class="asdef-options">STORIES</option></a>
+        </div>
       </div>
-      <script src="/js/animate.js"></script>
-      <script src="/js/script.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <button type="button" class="button-to-open-nav-bar">Menu</button>
+      <center><a href="Index.html"><div class="logo-section">THANKS!</div></a></center>
+      <center><article class="eds-article"><i class="italic-this">Thanks!, your comment has been sent to our developer</i></article></center>
+    </div>
+    <script src="/js/animate.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </body>
-</html>
+  </html>
