--- a/Megaweb/dev.html
+++ b/Megaweb/dev.html
@@ -14,8 +14,9 @@
           <ul class="navbar">
             <li><a href="dev.html">Programmers</a></li>
             <li><a href="about.html">About us</a></li>
-            <li><a href="contact.html">Contact</a></li>              </nav>
+            <li><a href="contact.html">Contact</a></li>              
           </ul>
+        </nav>  
         </div>
         <h1 class="main-title">MEGA WEB</h1>
         <div class="section-options">
