fix the figcaption transition

--- a/amorim/index.html
+++ b/amorim/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Amorim Template</title>
-    
+
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Arimo' >
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
@@ -43,8 +43,8 @@
             <button class="filter" type="button" data-filter=".category-1">Category 1</button>
             <button class="filter" type="button" data-filter=".category-2">Category 2</button>
             </div>
-                <div class="container" id="Container" >
-                   <ul class="row">
+                <div class="container-fluid" id="Container" >
+                   <ul class="row pull-left">
                     <li class="col-lg-3 mix category-2 film">
                         <a href="#" class="movie">
                             <figure>
@@ -59,7 +59,7 @@
                         </a>
                         <h5>FILME</h5>
                         <p>2015</p>
-                    </li> 
+                    </li>
                     <li class="col-lg-3 mix category-2 film">
                         <a href="#" class="movie">
                             <figure>
@@ -74,7 +74,7 @@
                         </a>
                         <h5>FILME</h5>
                         <p>2015</p>
-                    </li> 
+                    </li>
                     <li class="col-lg-3 mix category-2 film">
                         <a href="#" class="movie">
                             <figure>
@@ -89,7 +89,7 @@
                         </a>
                         <h5>FILME</h5>
                         <p>2015</p>
-                    </li> 
+                    </li>
                     <li class="col-lg-3 mix category-2 film">
                         <a href="#" class="movie">
                             <figure>
@@ -104,7 +104,7 @@
                         </a>
                         <h5>FILME</h5>
                         <p>2015</p>
-                    </li> 
+                    </li>
                     <li class="col-lg-3 mix category-2 film">
                         <a href="#" class="movie">
                             <figure>
@@ -119,12 +119,12 @@
                         </a>
                         <h5>FILME</h5>
                         <p>2015</p>
-                    </li> 
-                   </ul>            
+                    </li>
+                   </ul>
                 </div>
             </div>
         </div>
-    </div>   
+    </div>
    <!--
     <div class="controls">
         <label>Filter:</label>
@@ -156,7 +156,7 @@
     <script>
         $(document).ready(function(){
             $('#Container').mixItUp();
-        })    
+        })
     </script>
 </body>
 </html>
