last commit of the night

--- a/amorim/index.html
+++ b/amorim/index.html
@@ -53,7 +53,7 @@
                                     <i class="fa fa-facebook fa-2x"></i>
                                     <h4 class="rating">5/10</h4>
                                     <h6>hacking</h6>
-                                    <span class="button-green-download-big">Watch Online</span>
+                                    <span class="btn btn-success btn-big ">Watch Online</span>
                                 </figcaption>
                             </figure>
                         </a>
@@ -68,7 +68,7 @@
                                     <i class="fa fa-facebook fa-2x"></i>
                                     <h4 class="rating">5/10</h4>
                                     <h6>hacking</h6>
-                                    <span class="button-green-download-big">Watch Online</span>
+                                    <span class="btn btn-success btn-big ">Watch Online</span>
                                 </figcaption>
                             </figure>
                         </a>
@@ -83,7 +83,7 @@
                                     <i class="fa fa-facebook fa-2x"></i>
                                     <h4 class="rating">5/10</h4>
                                     <h6>hacking</h6>
-                                    <span class="button-green-download-big">Watch Online</span>
+                                    <span class="btn btn-success btn-big ">Watch Online</span>
                                 </figcaption>
                             </figure>
                         </a>
@@ -98,7 +98,7 @@
                                     <i class="fa fa-facebook fa-2x"></i>
                                     <h4 class="rating">5/10</h4>
                                     <h6>hacking</h6>
-                                    <span class="button-green-download-big">Watch Online</span>
+                                    <span class="btn btn-success btn-big ">Watch Online</span>
                                 </figcaption>
                             </figure>
                         </a>
@@ -111,9 +111,9 @@
                                 <img src="media/film.jpg" alt="Filme Test" />
                                 <figcaption>
                                     <i class="fa fa-facebook fa-2x"></i>
-                                    <h4 class="rating">5/10</h4>
-                                    <h6>hacking</h6>
-                                    <span class="button-green-download-big">Watch Online</span>
+                                    <h2 class="rating">5/10</h2>
+                                    <h2>Hacking</h2>
+                                    <span class="btn btn-success btn-big ">Watch Online</span>
                                 </figcaption>
                             </figure>
                         </a>
