final commit of the day

--- a/index.html
+++ b/index.html
@@ -9,34 +9,118 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<!-- CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="media.css">
+	<!-- FONT -->
+	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 
 </head>
 <body>
-
-
-		<div class="">
 			<div class="row">
 				<div class="header col-lg-12">
-	 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
+					<div class="container center">
+						<ul class="menu">
+							<li><a href="#">HOME</a></li>
+							<li><a href="#about">ABOUT US</a></li>
+							<li><a href="#team">TEAM</a></li>
+							<li><a href="#services">SERVICES</a></li>
+							<li><a href="#contact">CONTACT</a></li>
+							<ul class="pull-right">
+							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+							<li><a href="#"><i class="fa fa-github"></i></a></li>
+							</ul>
+						</ul>
+					</div>
 				</div>
-				<div class="section1 col-lg-12">
-	 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
+				<div class="about col-lg-12">
+					<div class="container">
+		 				<h1>About Us</h1>
+						<h2>We're X company, we've focus on Web. Our partners are Google, Facebook and Microsoft</h2>
+						<h3>Dont waste your time, become a partner too</h3>
+					</div>
 				</div>
-				<div class="section2 col-lg-12">
-	 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
+				<div class="inner1 col-lg-12">
+					<div class="container">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, fuga culpa atque nostrum praesentium ullam consequatur, in laborum ratione cum possimus tenetur iste temporibus odio, animi, blanditiis repellendus sunt hic!</p>
+					</div>
 				</div>
-				<div class="section3 col-lg-12">
-	 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
+				<div class="services col-lg-12">
+					<div class="container">
+						<h1>Services</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
+					</div>
+				</div>
+				<div class="inner2 col-lg-12">
+					<div class="container">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus odio totam unde, tempore quis quae reprehenderit sit fugit fuga sed optio asperiores atque, nobis qui a dignissimos laboriosam consectetur nostrum!</p>
+					</div>
+				</div>
+				<div class="team col-lg-12">
+					<div class="container">
+						<header>
+							<h1>Our Team</h1>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
+						</header>
+						<section class="members">
+							<article class="person col-lg-4">
+								<img src="media/team/carlton-banks.jpg" alt="">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi nemo fugit esse eius, laborum culpa accusantium dolorum reprehenderit odio quod omnis accusamus, veniam voluptatem voluptatum vitae totam doloremque incidunt.</p>
+								<i class="fa fa-facebook"></i>
+								<i class="fa fa-twitter"></i>
+								<i class="fa fa-linkedin"></i>
+							</article>
+							<article class="person col-lg-4">
+								<img src="media/team/will.jpg" alt="">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi nemo fugit esse eius, laborum culpa accusantium dolorum reprehenderit odio quod omnis accusamus, veniam voluptatem voluptatum vitae totam doloremque incidunt.</p>
+								<i class="fa fa-facebook"></i>
+								<i class="fa fa-twitter"></i>
+								<i class="fa fa-linkedin"></i>
+							</article>
+							<article class="person col-lg-4">
+								<img src="media/team/latrell.jpg" alt="">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi nemo fugit esse eius, laborum culpa accusantium dolorum reprehenderit odio quod omnis accusamus, veniam voluptatem voluptatum vitae totam doloremque incidunt.</p>
+								<i class="fa fa-facebook"></i>
+								<i class="fa fa-twitter"></i>
+								<i class="fa fa-linkedin"></i>
+							</article>
+						</section>
+					</div>
+				</div>
+				<div class="inner3 col-lg-12">
+					<div class="container">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus odio totam unde, tempore quis quae reprehenderit sit fugit fuga sed optio asperiores atque, nobis qui a dignissimos laboriosam consectetur nostrum!</p>
+					</div>
+				</div>
+				<div class="contact col-lg-12">
+					<div class="container">
+						<h1>Contact</h1>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
+					</div>
 				</div>
 			</div>
-			<!--  -->
-		</div>
+			<!-- ROW -->
+	<footer class="col-lg-12">
+		<p>Copyright &copy; @chocsx at <a href="http://livecoding.tv">LiveCoding.tv</a></p>
+	</footer>
 	</div>
 	<!-- JS -->
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootlint/latest/bootlint.min.js"></script>
+	<script>
+	$(document).ready(function(){
+			$('.menu li a').click(function(){
+				var content = $(this).attr('href');
+				var splitA = content.split('#');
+				var contentX = $('.'+splitA[1]).offset().top;
+						$('body, html').animate({scrollTop: contentX}, 1200);
+						console.log(contentX);
+
+			})
+	})
+	</script>
 </body>
 </html>
