--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Website From Scratch</title>
+	<title>Chac Informática - IT Solutions</title>
 	<!-- MOBILE DEVICES -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- IE BROWSER -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<!-- CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="media.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.theme.css">
+	<link rel="stylesheet" type="text/css" href="css/owl.transitions.css">
+	<link rel="stylesheet" type="text/css" href="css/media.css">
 	<!-- FONT -->
 	<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -17,109 +20,133 @@
 
 </head>
 <body>
-			<div class="row">
-				<div class="header col-lg-12">
-					<div class="container center">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="header col-lg-12">
+						<div class="logo pull-left"><img src="media/favicon.png" alt=""></div>
+						<a href="javascript:void(0);" class="dropdown pull-right"><i class="fa fa-navicon fa-2x"></i></a>
 						<ul class="menu">
-							<li><a href="#">HOME</a></li>
-							<li><a href="#about">ABOUT US</a></li>
-							<li><a href="#team">TEAM</a></li>
-							<li><a href="#services">SERVICES</a></li>
-							<li><a href="#contact">CONTACT</a></li>
-							<ul class="pull-right">
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-							<li><a href="#"><i class="fa fa-github"></i></a></li>
+							<li><a href="#home">Home</a></li>
+							<li><a href="#about">Sobre Nós</a></li>
+							<li><a href="#cases">Cases</a></li>
+							<li><a href="#team">Equipe</a></li>
+							<li><a href="#contact">Contato</a></li>
+							<ul class="social pull-right">
+							<li><a href="https://www.facebook.com/ChacInformatica" target="_blank" rel="nofollow"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://plus.google.com/+ChacBrInformatica" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+							<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</ul>
 					</div>
-				</div>
-				<div class="about col-lg-12">
-					<div class="container">
-		 				<h1>About Us</h1>
-						<h2>We're X company, we've focus on Web. Our partners are Google, Facebook and Microsoft</h2>
-						<h3>Dont waste your time, become a partner too</h3>
+					<div class="submenu col-lg-12">
+						<ul>
+							<li><a href="#home">Home</a></li>
+							<li><a href="#about">Sobre Nós</a></li>
+							<li><a href="#cases">Cases</a></li>
+							<li><a href="#team">Equipe</a></li>
+							<li><a href="#contact">Contato</a></li>
+						</ul>
 					</div>
 				</div>
-				<div class="inner1 col-lg-12">
-					<div class="container">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, fuga culpa atque nostrum praesentium ullam consequatur, in laborum ratione cum possimus tenetur iste temporibus odio, animi, blanditiis repellendus sunt hic!</p>
+				<div class="row">
+				<div id="carousel" class="home owl-carousel owl-theme ">
+					<div class="item col-lg-12" style="background: url(media/slider/photo-1415931633537-351070d20b81.jpg) no-repeat center; background-size: cover;">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem unde atque beatae id assumenda commodi sed delectus aperiam laudantium, dolorum accusamus cupiditate non, eligendi, quam incidunt inventore eveniet officiis deleniti.</p>
+					</div>
+					<div class="item" style="background: url(media/slider/photo-1433148749784-5e235e9efd12.jpg) no-repeat center; background-size: cover;">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic blanditiis eligendi necessitatibus quas cum repellendus vero deleniti consequatur voluptatum in quis magnam, recusandae, libero voluptatem modi eaque nulla earum neque.</p>
+					</div>
+					<div class="item" style="background: url(media/slider/photo-1433321768402-e8ed97b0324c.jpg) no-repeat center; background-size: cover;">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus excepturi inventore, accusantium beatae odio exercitationem iste dolor in perferendis, numquam repudiandae sit. Esse qui adipisci tempore mollitia, earum, distinctio nihil.</p>
+					</div>
+					<div class="item" style="background: url(media/slider/photo-1438480478735-3234e63615bb.jpg) no-repeat center; background-size: cover;">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum amet facere illo esse placeat ipsa, aut ducimus maxime in, eaque quo similique cumque corrupti tenetur, nulla. Ullam aliquam, ea odio.</p>
 					</div>
 				</div>
-				<div class="services col-lg-12">
-					<div class="container">
-						<h1>Services</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
-					</div>
 				</div>
-				<div class="inner2 col-lg-12">
-					<div class="container">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus odio totam unde, tempore quis quae reprehenderit sit fugit fuga sed optio asperiores atque, nobis qui a dignissimos laboriosam consectetur nostrum!</p>
-					</div>
-				</div>
-				<div class="team col-lg-12">
-					<div class="container">
+				<div class="row">
+					<div class="about col-lg-12">
 						<header>
-							<h1>Our Team</h1>
+							<img src="media/logo.png" alt="">
+							<h1>Sobre Nós</h1>
+						</header>
+					 		<p>Chac Informática, com experiencia de 7 anos no mercado de TI, estamos preparados para atender as necessidades de empresas de pequeno a grande porte, oferecendo serviços de fabrica de software, Busines Inteligence, outsourcing de profissionais e consultoria de negócios e tecnologia.</p>		
+					</div>
+				</div>
+				<div class="row">
+					<div class="cases col-lg-12">
+						<h2>Cases</h2>
+						<p>Buscamos estabelecer uma relação transparente com os nossos cliente, de todas as formas possíveis, prezando por um atendimento rápido e eficaz.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="team col-lg-12">
+						<header>
+							<h1>Nossa Equipe</h1>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
 						</header>
-						<section class="members">
-							<article class="person col-lg-4">
-								<img src="media/team/carlton-banks.jpg" alt="">
+						<div class="row">
+							<article class="person col-lg-12">
+								<img src="media/team/carlos.jpg" alt="">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi nemo fugit esse eius, laborum culpa accusantium dolorum reprehenderit odio quod omnis accusamus, veniam voluptatem voluptatum vitae totam doloremque incidunt.</p>
-								<i class="fa fa-facebook"></i>
-								<i class="fa fa-twitter"></i>
-								<i class="fa fa-linkedin"></i>
+								<a href="https://www.facebook.com/ChacMaster"></a><i class="fa fa-facebook"></i></a>
+								<a href="https://github.com/chacmaster" target="_blank"><i class="fa fa-github"></i></a>
+								<a href="https://br.linkedin.com/pub/carlos-carvalho/40/450/544" target="_blank" rel='nofollow'><i class="fa fa-linkedin"></i></a>
 							</article>
-							<article class="person col-lg-4">
-								<img src="media/team/will.jpg" alt="">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi nemo fugit esse eius, laborum culpa accusantium dolorum reprehenderit odio quod omnis accusamus, veniam voluptatem voluptatum vitae totam doloremque incidunt.</p>
-								<i class="fa fa-facebook"></i>
-								<i class="fa fa-twitter"></i>
-								<i class="fa fa-linkedin"></i>
-							</article>
-							<article class="person col-lg-4">
-								<img src="media/team/latrell.jpg" alt="">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam commodi nemo fugit esse eius, laborum culpa accusantium dolorum reprehenderit odio quod omnis accusamus, veniam voluptatem voluptatum vitae totam doloremque incidunt.</p>
-								<i class="fa fa-facebook"></i>
-								<i class="fa fa-twitter"></i>
-								<i class="fa fa-linkedin"></i>
-							</article>
-						</section>
+						</div>
 					</div>
 				</div>
-				<div class="inner3 col-lg-12">
-					<div class="container">
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus odio totam unde, tempore quis quae reprehenderit sit fugit fuga sed optio asperiores atque, nobis qui a dignissimos laboriosam consectetur nostrum!</p>
+				<div class="row">
+					<div class="contact col-lg-12 ">
+						<header>
+		                    <h1>GET IN TOUCH</h1>
+		                    <p>Rua Cecília Meireles 79, Gravataí , Brazil. Tel:(51) 3042-4383</p>
+		                </header> 
+		                <div class="row ">
+		                <div class="col-lg-1"></div>
+		                	<div class="col-lg-10 ">
+			                <form action="POST" class="form-contact ">
+			                    <div class="col-lg-6 col-xs-12 ">
+			                    	<input type="text" class="col-lg-12" placeholder="Your Name" required />
+			                    </div>
+			                    <div class="col-lg-6 col-xs-12 ">
+			                    	<input type="text"  class="col-lg-12" placeholder="Your Email" required />
+			                    </div>
+			                    <div class="col-lg-12 col-xs-12 ">
+			                    	<textarea placeholder="Deixe sua Mensagem" class="col-lg-12" ></textarea>
+								</div>
+								<div class="col-xs-12">
+									<input type="submit" value="SEND MESSAGE"/>
+								</div>
+			                </form>
+			                </div>
+		                <div class="col-lg-1"></div>
+		                </div>
 					</div>
 				</div>
-				<div class="contact col-lg-12">
-					<div class="container">
-						<h1>Contact</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsa veniam, exercitationem eveniet autem ab numquam vitae nulla repudiandae. Omnis eum quibusdam eius impedit quasi expedita ipsum nulla laudantium quae.</p>
-					</div>
-				</div>
+							<div class="row">
+				<footer class="">
+					<p>&copy; Copyright 2015 <a href="http://doubleweb.com.br" target="_blank">DoubleWeb IT</a></p>
+				</footer>
+			</div>
 			</div>
 			<!-- ROW -->
-	<footer class="col-lg-12">
-		<p>Copyright &copy; @chocsx at <a href="http://livecoding.tv">LiveCoding.tv</a></p>
-	</footer>
-	</div>
+
 	<!-- JS -->
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootlint/latest/bootlint.min.js"></script>
+	<script src="js/owl.carousel.js"></script>
+	<script src="js/js.js"></script>
 	<script>
 	$(document).ready(function(){
-			$('.menu li a').click(function(){
-				var content = $(this).attr('href');
-				var splitA = content.split('#');
-				var contentX = $('.'+splitA[1]).offset().top;
-						$('body, html').animate({scrollTop: contentX}, 1200);
-						console.log(contentX);
+		$('.submenu li a').click(function(){
+		var content = $(this).attr('href');
+		var splitA = content.split('#');
+		var contentX = $('.'+splitA[1]).offset().top;
 
-			})
+		$('body, html').animate({scrollTop: contentX}, 1200);
+			$('.submenu').hide(600);
+		});
 	})
 	</script>
 </body>
